--- a/Business_Card/src/entities/description/components/bottomSlice/ui/styles/Bottom.module.css
+++ b/Business_Card/src/entities/description/components/bottomSlice/ui/styles/Bottom.module.css
@@ -1,25 +1,48 @@
+.container_shadow {
+    display: grid;
+    z-index: 1;
+    width: inherit;
+}
+
+.slice_shadow {
+    display: grid;
+    grid-area: description;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.slice_shadow>* {
+    visibility: hidden;
+}
+
+.links {
+    display: grid;
+    height: 100%;
+    grid-area: description;
+    z-index: 3;
+}
+
+:root {
+    --transform_down: calc(var(--responsive-size) * 4);
+    --transform_up: calc(var(--responsive-size) * -4);
+}
+
 .container {
     display: grid;
     grid-area: once;
-    z-index: 1;
+    transition: transform 500ms ease-in-out;
+    z-index: 0;
+    width: inherit;
 }
 
 .slice {
     display: grid;
-    position: relative;
     height: inherit;
-    z-index: 1;
-    border: 0.5vw black solid;
-    border-radius: 0.5vw;
-    background-color: white;
-    padding: 1vw;
-    background-color: black;
-    opacity: 0.5;
-    min-height: 10vw;
-}
-
-.slice>* {
-    visibility: hidden;
+    align-items: center;
+    border: calc(var(--responsive-size) * 0.5) solid black;
+    border-radius: calc(var(--responsive-size) * 0.5);
+    padding: calc(var(--responsive-size) * 2);
+    min-height: calc(var(--responsive-size) * 14);
 }
 
 .parameters {
@@ -28,16 +51,46 @@
 
 .header {
     display: flex;
-    justify-content: space-between;
+    position: relative;
+    bottom: calc(var(--responsive-size) * 6);
+    z-index: 1;
+    padding-left: calc(var(--responsive-size) * 0.5);
+    font-size: calc(var(--responsive-size) * 3);
+    width: min-content;
+    height: 0px;
 }
 
-.header>* {
-    visibility: hidden;
+.description {
+    display: flex;
+    padding: var(--responsive-size);
+    font-size: calc(var(--responsive-size) * 2);
+    z-index: 1;
 }
 
 .name {
-    background-color: rgb(238, 238, 202);
+    background-color: rgb(243, 243, 119);
+    box-shadow: 0 0 min(1vh, var(--responsive-size)) rgb(243, 243, 119);
     width: max-content;
-    padding: 1vw;
-    border-radius: 0.5vw 0.5vw 0vw 0vw;
+    padding: var(--responsive-size);
+    border-radius: calc(var(--responsive-size) * 0.5) calc(var(--responsive-size) * 0.5) 0 0;
+}
+
+.title {
+    font-size: calc(var(--responsive-size) * 2.5) !important;
+    font-weight: 500;
+}
+
+.wrapper {
+    display: grid;
+    gap: var(--responsive-size);
+}
+
+.list {
+    display: grid;
+    padding-top: var(--responsive-size);
+    padding-left: var(--responsive-size);
+    list-style-position: inside;
+    font-size: calc(var(--responsive-size) * 2);
+    gap: var(--responsive-size);
+    width: inherit;
 }
