--- a/Business_Card/src/entities/description/components/topSlice/ui/styles/TopSlice.module.css
+++ b/Business_Card/src/entities/description/components/topSlice/ui/styles/TopSlice.module.css
@@ -1,39 +1,80 @@
+:root {
+    --transform_down: calc(var(--responsive-size) * 4);
+    --transform_up: calc(var(--responsive-size) * -4);
+}
+
 .container {
     display: grid;
     grid-area: once;
     transition: transform 500ms ease-in-out;
-    z-index: 3;
+    z-index: 2;
+    width: 100%;
 }
 
 .slice {
     display: grid;
-    position: relative;
     height: inherit;
-    z-index: 3;
-    border: 0.5vw black solid;
-    border-radius: 0.5vw;
+    align-items: center;
+    border: calc(var(--responsive-size)*0.3) rgb(250, 236, 218) solid;
+    border-radius: calc(var(--responsive-size) * 0.5);
     background-color: white;
-    padding: 1vw;
-    min-height: 10vw;
+    padding: calc(var(--responsive-size) * 2);
+    min-height: calc(var(--responsive-size) * 14);
+}
+
+.scroll_down {
+    transform: translateY(var(--transform_up));
+}
+
+.scroll_up {
+    transform: translateY(var(--transform_down));
 }
 
 .parameters {
     display: grid;
 }
 
-.container:hover {
-    transform: translateY(4vw);
-}
-
 .header {
     display: flex;
-    padding-left: 0.5vw;
-    justify-content: space-between;
+    position: relative;
+    bottom: calc(var(--responsive-size) * 6);
+    z-index: 1;
+    padding-left: calc(var(--responsive-size) * 0.5);
+    font-size: calc(var(--responsive-size) * 3);
+    width: min-content;
+    height: 0px;
+}
+
+.description {
+    display: flex;
+    padding: var(--responsive-size);
+    font-size: calc(var(--responsive-size) * 2);
+    z-index: 1;
 }
 
 .name {
-    background-color: rgb(238, 238, 202);
+    background-color: rgb(243, 243, 119);
+    box-shadow: 0 0 min(1vh, var(--responsive-size)) rgb(243, 243, 119);
     width: max-content;
-    padding: 1vw;
-    border-radius: 0.5vw 0.5vw 0vw 0vw;
+    padding: var(--responsive-size);
+    border-radius: calc(var(--responsive-size) * 0.5) calc(var(--responsive-size) * 0.5) 0 0;
+}
+
+.title {
+    font-size: calc(var(--responsive-size) * 2.5) !important;
+    font-weight: 500;
+}
+
+.wrapper {
+    display: grid;
+    gap: var(--responsive-size);
+}
+
+.list {
+    display: grid;
+    padding-top: var(--responsive-size);
+    padding-left: var(--responsive-size);
+    list-style-position: inside;
+    font-size: calc(var(--responsive-size) * 2);
+    gap: var(--responsive-size);
 }
