--- a/Business_Card/src/shared/ui/preview/ui/styles/Preview.module.css
+++ b/Business_Card/src/shared/ui/preview/ui/styles/Preview.module.css
@@ -1,6 +1,8 @@
 .preview {
     display: flex;
-    border: 0.5vw black solid;
-    border-radius: 0.5vw;
+    border: calc(var(--responsive-size)*0.3) rgb(250, 236, 218) solid;
+    border-radius: calc(var(--responsive-size) * 0.5);
     width: min-content;
+    width: min-content;
+    overflow: hidden;
 }
