--- a/Business_Card/src/widgets/header/ui/styles/Header.module.css
+++ b/Business_Card/src/widgets/header/ui/styles/Header.module.css
@@ -1,5 +1,9 @@
 .header {
     display: flex;
     justify-content: space-between;
-    border:1px green solid;
+    align-items: center;
+    padding: calc(var(--responsive-size));
+    background-color: rgb(253, 246, 237);
+    border: calc(var(--responsive-size)*0.2) rgb(250, 236, 218) solid;
+    border-radius: 0 0 var(--responsive-size) var(--responsive-size);
 }
