--- a/Business_Card/src/widgets/projects/components/project/ui/styles/Project.module.css
+++ b/Business_Card/src/widgets/projects/components/project/ui/styles/Project.module.css
@@ -1,7 +1,9 @@
 .project {
     display: flex;
-    padding: 1vw;
-    gap:2vw;
+    padding: var(--responsive-size);
+    gap: calc(var(--responsive-size) * 4);
     flex-wrap: wrap;
     justify-content: center;
+    width: calc(var(--responsive-size) * 80);
+    border-radius: var(--responsive-size);
 }
