--- a/Business_Card/src/widgets/projects/ui/styles/Projects.module.css
+++ b/Business_Card/src/widgets/projects/ui/styles/Projects.module.css
@@ -1,11 +1,31 @@
 .projects {
     display: grid;
-    border: 0.5vw black solid;
-    padding: 2vw;
-    gap:2vw;
+    padding: calc(var(--responsive-size) * 2);
+    padding-top: calc(var(--responsive-size) * 9);
+    ;
+    gap: calc(var(--responsive-size) * 5);
 }
 
 .project {
-    border: 2px black solid;
+    display: grid;
+    gap: calc(var(--responsive-size)*4);
     justify-items: center;
+}
+
+.title {
+    padding: var(--responsive-size);
+    background-color: rgba(253, 246, 237, 0.295);
+    border: calc(var(--responsive-size)*0.3) rgb(250, 236, 218) solid;
+    border-radius: var(--responsive-size);
+    width: min-content;
+    justify-self: center;
+}
+
+.recent_line {
+    display: flex;
+    align-self: center;
+    background-color: rgba(137, 192, 115, 0.5);
+    border-radius: var(--responsive-size);
+    width: 100%;
+    height: var(--responsive-size);
 }
