--- a/Business_Card/src/entities/description/components/topSlice/ui/styles/TopSlice.module.css
+++ b/Business_Card/src/entities/description/components/topSlice/ui/styles/TopSlice.module.css
@@ -46,9 +46,11 @@
 }
 
 .description {
-    display: flex;
+    display: grid;
     padding: var(--responsive-size);
+    padding-left: calc(var(--responsive-size) * 4);
     font-size: calc(var(--responsive-size) * 2);
+    gap: var(--responsive-size);
     z-index: 1;
 }
 
