--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-  --color__main-theme: #f7f8fa;
-  --color__main-theme_accent: #dedfe0;
+  --color__main-theme: #fdf6ed;
+  --color__main-theme_accent: #faecda;
   --color__secondary-theme: #007bff;
   --font_family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-family: Roboto;
@@ -63,8 +63,7 @@ header {
   min-height: 100%;
 }
 
-.outlet {
+.plug {
+  padding: calc(var(--responsive-size) * 0.5);
   background-color: rgba(153, 148, 143, 0.4);
 }
-
-footer {}
