--- a/Business_Card/src/entities/description/components/bottomSlice/components/links/ui/styles/Links.module.css
+++ b/Business_Card/src/entities/description/components/bottomSlice/components/links/ui/styles/Links.module.css
@@ -37,7 +37,7 @@
 }
 
 .link>.svg {
-    background-image: url('../../../../../../../../shared/assets/play.svg');
+    background-image: url('../../../../../../../../shared/assets/components/play.svg');
     background-repeat: no-repeat;
     background-size: contain;
 }
