--- a/Business_Card/src/shared/ui/preview/ui/styles/Preview.module.css
+++ b/Business_Card/src/shared/ui/preview/ui/styles/Preview.module.css
@@ -3,6 +3,13 @@
     border: calc(var(--responsive-size)*0.3) rgb(250, 236, 218) solid;
     border-radius: calc(var(--responsive-size) * 0.5);
     width: min-content;
+    overflow: hidden;
+    max-width: 100%;
     border:1px red solid;
     justify-content: center;
+}
+
+.preview img {
+    width: 100%; /* Изображение занимает всю ширину контейнера */
+    height: auto; /* Сохраняет соотношение сторон */
 }
