--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -33,13 +33,12 @@
 .app {
   display: grid;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   font-size: 1rem;
 }
 
 .main_layout {
   display: grid;
-  height: 100%;
   grid-template-rows: min-content 1fr min-content;
   background-image: url('/src/shared/assets/preview5.webp');
   background-size: cover;
@@ -64,6 +63,7 @@ header {
 }
 
 .plug {
+  display: grid;
   padding: calc(var(--responsive-size) * 0.5);
   background-color: rgba(153, 148, 143, 0.4);
 }
