--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -46,6 +46,7 @@
   background-attachment: fixed;
   background-position: center center;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 header {
@@ -59,11 +60,12 @@ header {
 }
 
 .body {
-  min-height: 100%;
+  height: 100%;
 }
 
 .plug {
   display: grid;
+  height: 100%;
   padding: calc(var(--responsive-size) * 0.5);
   background-color: rgba(153, 148, 143, 0.4);
 }
