--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -33,12 +33,13 @@
 .app {
   display: grid;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-size: 1rem;
 }
 
 .main_layout {
   display: grid;
+  height: 100%;
   grid-template-rows: min-content 1fr min-content;
   background-image: url('/src/shared/assets/preview5.webp');
   background-size: cover;
@@ -46,7 +47,6 @@
   background-attachment: fixed;
   background-position: center center;
   scroll-behavior: smooth;
-  height: 100%;
 }
 
 header {
@@ -60,12 +60,10 @@ header {
 }
 
 .body {
-  height: 100%;
+  min-height: 100%;
 }
 
 .plug {
-  display: grid;
-  height: 100%;
   padding: calc(var(--responsive-size) * 0.5);
   background-color: rgba(153, 148, 143, 0.4);
 }
