--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -39,13 +39,12 @@
 .app {
   display: grid;
   width: 100%;
-  height: 100vh;
+  height: max-content;
   font-size: 1rem;
 }
 
 .main_layout {
   display: grid;
-  height: 100%;
   grid-template-rows: min-content 1fr min-content;
   background-image: url('/src/shared/assets/preview5.webp');
   background-size: cover;
@@ -66,7 +65,7 @@ header {
 }
 
 .body {
-  min-height: 100%;
+  height: max-content;
 }
 
 .plug {
