style:change css of main layout

--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -52,6 +52,7 @@
   background-attachment: fixed;
   background-position: center center;
   scroll-behavior: smooth;
+  min-height: 100%;
 }
 
 header {
