--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -47,6 +47,7 @@
 
 .main_layout {
   display: grid;
+  width: 100vw;
   height: 100%;
   background-image: url('/src/shared/assets/preview5.webp');
   background-size: cover;
