--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -24,9 +24,21 @@
   }
 }
 
+@media (min-width: 768px) {
+  .main_layout {
+    background-image: url('/src/shared/assets/preview5.webp');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
 @media (max-width: 768px) {
   .main_layout {
-    background-attachment: local;
+    background-attachment: scroll;
+    background-size: contain;
+    background-repeat:repeat-y;
+    background-image: url('/src/shared/assets/mobilePreview.webp');
   }
 }
 
@@ -42,17 +54,13 @@
   width: 100%;
   height: 100%;
   font-size: 1rem;
-  
+
 }
 
 .main_layout {
   display: grid;
   width: 100vw;
   height: 100%;
-  background-image: url('/src/shared/assets/preview5.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   background-position: center center;
   scroll-behavior: smooth;
 }
