style:change css of main layout

--- a/Business_Card/src/app/ui/styles/App.module.css
+++ b/Business_Card/src/app/ui/styles/App.module.css
@@ -29,6 +29,7 @@
     background-image: url('/src/shared/assets/preview5.webp');
     background-attachment: fixed;
     background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
   }
 }
@@ -38,7 +39,8 @@
     background-attachment: scroll;
     background-size: contain;
     background-repeat:repeat-y;
-    background-image: url('/src/shared/assets/mobilePreview.webp');
+    background-position: bottom center;
+    background-image: url('/src/shared/assets/MobilePreview.webp');
   }
 }
 
@@ -61,7 +63,7 @@
   display: grid;
   width: 100vw;
   height: 100%;
-  background-position: center center;
+  
   scroll-behavior: smooth;
 }
 
