--- a/Business_Card/src/entities/links/ui/styles/Links.module.css
+++ b/Business_Card/src/entities/links/ui/styles/Links.module.css
@@ -2,6 +2,7 @@
     display: flex;
     font-size: calc(var(--responsive-size)*2);
     gap: calc(var(--responsive-size)*2);
+    padding-right: var(--responsive-size);
 }
 
 .links>* {
